<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Text when you arrive</string>
    <string name="message">SMS message:</string>
    <string name="message_hint">Write your loved one a reassuring message</string>
    <string name="number">Number</string>
    <string name="number_hint">Dial up</string>
    <string name="submit_string">Submit</string>
    <string name="reset_all_string">Reset All Alarms</string>
    <string name="reset_string">Reset</string>
    <string name="number_button">Select a contact</string>
    <string name="time_button">Choose Time</string>
    <string name="place_button">Select Place</string>
    <string name="distance_hint">Enter distance [km]</string>
    <string name="days">Days:</string>
    <string name="monday">MO</string>
    <string name="tuesday">TU</string>
    <string name="wednesday">WE</string>
    <string name="thursday">TH</string>
    <string name="friday">FR</string>
    <string name="saturday">SA</string>
    <string name="sunday">SU</string>
    <string name="alarms">Alarms:</string>


</resources>
